--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/sumikkosoft/glitch-image/"
+    "build": "vite build --base=/glitch-image/",
+    "deploy": "yarn build && gh-pages -d dist"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
@@ -14,6 +15,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.23.0",
     "eslint-config-sumikko": "^0.4.0",
+    "gh-pages": "^3.1.0",
     "sass": "^1.32.8",
     "typescript": "^4.2.3",
     "vite": "^2.1.5",
